# NonomiBeat

./: .gitignore  README.md  credits.txt  install.sh  pyproject.toml
src/: __main__.py
src/assets/lisences/: beats-good-night-lofi-cozy-chill-music-160166-license.txt  beats-lofi-background-music-314199-license.txt  beats-lofi-background-music-432206-license.txt  beats-lofi-lofi-chill-3-398301-license.txt  beats-lofi-lofi-hiphop-401921-license.txt  beats-lofi-lofi-music-412319-license.txt  beats-lofi-lofi-song-401920-license.txt
src/nonomi/: main.py
src/nonomi/audio/: audio.py  composer.py  drums.py  engine.py  manager.py  piano.py  sampler.py
src/nonomi/core/: core.py
src/nonomi/input/: cam.py
src/nonomi/patches/: main.pd
src/nonomi/ui/: cli.py
src/nonomi/utils/: logger.py  visualizer.py
tests/: test.pd  test.py
